--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,52 +1,60 @@
-<nav class="navbar navbar-expand-sm bg-light navbar-light">
-    <ul class="navbar-nav">
+<nav class="navbar navbar-expand-sm bg-light navbar-light d-flex justify-content-around">
+    <ul class="navbar navbar-nav mr-5">
         <li>
-            <button (click)="onGetAllProducts()" class="btn btn-outline-info">All</button>
+            <button (click)="onGetAllProducts()" class="btn btn-sm btn-outline-info ml-3">All</button>
         </li>
         <li>
-            <button class="btn btn-outline-info">Selected</button>
+            <button (click)="onGetSelectedProducts()" class="btn btn-sm btn-outline-info ml-3">Selected</button>
         </li>
         <li>
-            <button class="btn btn-outline-info">Available</button>
+            <button (click)="onGetAvailableProducts()" class="btn btn-sm btn-outline-info ml-3">Available</button>
         </li>
+    </ul>
+
+    <ul class="navbar navbar-nav ml-auto">
+        <li>
+            <form #f="ngForm" (ngSubmit) = "onSearch(f.value)" class="form-inline">
+                <input ngModel name="keyword" type="text">
+                <button type="submit" class="btn btn-sm btn-outline-info ml-5">
+                    <span class="fa fa-search"></span>
+                </button>
+            </form>
+        </li>
+
     </ul>
 </nav>
 
-<ng-container *ngIf="products$ | async as result" [ngSwitch]="result.dataState">
-    <ng-container *ngSwitchCase="DataStateEnum.LOADING">
-        Loading ....
+<div class="container">
+    <ng-container *ngIf="products$ | async as result" [ngSwitch]="result.dataState">
+        <ng-container *ngSwitchCase="DataStateEnum.LOADING">
+            Loading ...
+        </ng-container>
+        <ng-container *ngSwitchCase="DataStateEnum.LOADED">
+            <table class="table">
+                <thead>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                    <th>Selected</th>
+                    <th>Available</th>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let p of result.data">
+                        <td>{{p.id}}</td>
+                        <td>{{p.name}}</td>
+                        <td>{{p.price}}</td>
+                        <td>{{p.quantity}}</td>
+                        <td>{{p.selected}}</td>
+                        <td>{{p.available}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </ng-container>
+        <ng-container *ngSwitchCase="DataStateEnum.ERROR">
+            <div class="alert alert-danger">
+                {{result.errorMessage}}
+            </div>
+        </ng-container>
     </ng-container>
-    <ng-container *ngSwitchCase="DataStateEnum.LOADED">
-        <table class="table">
-            <thead>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Quantity</th>
-                <th>Selected</th>
-                <th>Available</th>
-            </thead>
-            <tbody>
-                <tr *ngFor="let p of result.data">
-                    <td>{{p.id}}</td>
-                    <td>{{p.name}}</td>
-                    <td>{{p.price}}</td>
-                    <td>{{p.quantity}}</td>
-                    <td>{{p.selected}}</td>
-                    <td>{{p.available}}</td>
-                </tr>
-            </tbody>
-        </table>
-    </ng-container>
-    <ng-container *ngSwitchCase="DataStateEnum.LOADING">
-        <div class="alert-danger">
-            {{result.errorMessage}}
-        </div>
-    </ng-container>
-     
-</ng-container>
-
-<div class="container" *ngIf="products$">
-    
-
 </div>
