--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,79 +1,2 @@
-<nav class="navbar navbar-expand-sm bg-light navbar-light d-flex justify-content-around">
-    <ul class="navbar navbar-nav ml-2">
-        <li>
-            <button (click)="onGetAllProducts()" class="btn btn-sm btn-outline-info ml-3">All</button>
-        </li>
-        <li>
-            <button (click)="onGetSelectedProducts()" class="btn btn-sm btn-outline-info ml-3">Selected</button>
-        </li>
-        <li>
-            <button (click)="onGetAvailableProducts()" class="btn btn-sm btn-outline-info ml-3">Available</button>
-        </li>
-        <li>
-            <button (click)="onNewProduct()" class="btn btn-sm btn-outline-info ml-3">New</button>
-        </li>
-    </ul>
-
-    <ul class="navbar navbar-nav ml-auto">
-        <li>
-            <form #f="ngForm" (ngSubmit) = "onSearch(f.value)" class="form-inline">
-                <input ngModel name="keyword" type="text">
-                <button type="submit" class="btn btn-sm btn-outline-info ml-5">
-                    <span class="fa fa-search"></span>
-                </button>
-            </form>
-        </li>
-
-    </ul>
-</nav>
-
-<div class="container">
-    <ng-container *ngIf="products$ | async as result" [ngSwitch]="result.dataState">
-        <ng-container *ngSwitchCase="DataStateEnum.LOADING">
-            Loading ...
-        </ng-container>
-        <ng-container *ngSwitchCase="DataStateEnum.LOADED">
-            <table class="table">
-                <thead>
-                    <th>ID</th>
-                    <th>Name</th>
-                    <th>Price</th>
-                    <th>Quantity</th>
-                    <th>Available</th>
-                    <th>Selected</th>
-                    <td>Delete</td>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let p of result.data">
-                        <td>{{p.id}}</td>
-                        <td>{{p.name}}</td>
-                        <td>{{p.price}}</td>
-                        <td>{{p.quantity}}</td>
-                        <td>{{p.available}}</td>
-                        <td>
-                            <button [ngClass]="p.selected?' btn btn-success' : 'btn btn-danger'" (click)="onSelect(p)">
-                                <span *ngIf="p.selected">Unselect</span>
-                                <span *ngIf="!p.selected">Select</span>
-                            </button>
-                        </td>
-                        <td>
-                            <button class="btn btn-danger" (click)="onDelete(p)">
-                                <span class="fa fa-trash-o"></span>
-                            </button>
-                        </td>
-                        <td>
-                            <button class="btn btn-outline-info" (click)="onEdit(p)">
-                                <span class="fa fa-edit"></span>
-                            </button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </ng-container>
-        <ng-container *ngSwitchCase="DataStateEnum.ERROR">
-            <div class="alert alert-danger">
-                {{result.errorMessage}}
-            </div>
-        </ng-container>
-    </ng-container>
-</div>
+<app-products-nav-bar (productEventEmitter)="onActionEvent($event)"></app-products-nav-bar>
+<app-products-list [productsList$]="products$" (productsEventEmitter)="onActionEvent($event)"></app-products-list>
